@@ -84,6 +84,7 @@ include queue/Make.defs
 include wqueue/Make.defs
 include misc/Make.defs
 include audio/Make.defs
+include symtab/Make.defs
 
 # REVISIT: Backslash causes problems in $(COBJS) target
 DELIM := $(strip /)
