@@ -1,0 +1,14 @@
+#
+# For a description of the syntax of this configuration file,
+# see the file kconfig-language.txt in the NuttX tools repository.
+#
+
+config LIBC_SYMTAB
+	bool "Include canned symtab for applications and shell"
+	default n
+	depends on EXECFUNCS_HAVE_SYMTAB
+	---help---
+		Build and include default symbol table in the NuttX library.
+		The symbol table is selected by call canned_symtab_initialize().
+		The table libc/symtab/canned_symtab.inc has to be generated
+		by mksymtab manually before this option is selected.
